<androidx.cardview.widget.CardView
    android:layoutDirection="rtl"
    app:cardCornerRadius="@dimen/_10sdp"
    android:layout_centerHorizontal="true"
    android:layout_margin="@dimen/_10sdp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                style="@style/item_number"
                android:text="@string/status"/>

            <TextView
                android:id="@+id/status"
                android:onClick="onClick"
                android:tag="off"
                android:text="@string/off"
                style="@style/item_number"
                android:textColor="@color/red"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/recived_number"
                style="@style/item_number"/>
            <TextView
                android:id="@+id/number_phone"
                android:onClick="onClick"
                android:tag="number_phone"
                android:layoutDirection="ltr"
                android:text="@string/_0919_519_1378"
                style="@style/item_number"/>
        </LinearLayout>

    </LinearLayout>
</androidx.cardview.widget.CardView>